# rs-lms-rest

./: Cargo.toml  README.md
migrations/: 0001_books_table.sql
src/: main.rs
