[package]
name = "lms-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
axum-macros = "0.3.8"
serde = "1.0.174"
serde_json = "1.0.103"
sqlx = { version = "0.7", features = [ "postgres",  "runtime-tokio", "tls-rustls" ] }
sqlx-cli = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
